2009-10-24  Glenn Morris  <rgm@gnu.org>

	* erc-dcc.el (pcomplete-erc-all-nicks):
	* erc-notify.el (pcomplete-erc-all-nicks):
	Autoload it, to silence compiler.

	* erc-dcc.el (pcomplete/erc-mode/DCC): Replace cl-function
	remove-duplicates with erc-delete-dups.

2009-09-27  Johan Bockgård  <bojohan@gnu.org>

	* erc-button.el (erc-button-keymap): Bind `follow-link'.

2009-09-26  Johan Bockgård  <bojohan@gnu.org>

	* erc-button.el (erc-button-add-button): Only call
	`widget-convert-button' in XEmacs. For Emacs (at least), it
	doesn't seem to have any purpose except creating lots of overlays,
	slowing everything down.

2009-09-19  Glenn Morris  <rgm@gnu.org>

	* erc-lang.el (line): Define for compiler.

2009-07-22  Kevin Ryde  <user42@zip.com.au>

	* erc/erc.el (erc-cmd-MODE): Hyperlink urls in docstring with URL `...'.

2009-03-13  D. Goel  <deego3@gmail.com>

	* erc-backend.el: In (multiple-value-bind/setq .. ls),
	ls-> (values-list ls) throughout.
	* erc.el: Ditto.

2009-01-18  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-header-line-uses-tabbar-p): Set to nil by default.

2009-01-16  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-input-message): Conditionalize previous change for XEmacs.

	* erc-dcc.el (erc-dcc-server): Silence warning about obsolete function
	behind fboundp test.

2009-01-09  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-input-message): Replace last-command-char with
	last-command-event.

2009-01-08  Glenn Morris  <rgm@gnu.org>

	* erc.el (tabbar--local-hlf): Silence compiler.

2009-01-03  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-user-input): Do not include text properties when
	returning user input.


See ChangeLog.08 for earlier changes.

    Copyright (C) 2009 Free Software Foundation, Inc.

  This file is part of GNU Emacs.

  GNU Emacs is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or