@@ -1,3 +1,9 @@
+2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* erc.el (erc-display-line-1, erc-process-away):
+	* erc-truncate.el (erc-truncate-buffer-to-size):
+	Use with-current-buffer.
+
 2009-10-24  Glenn Morris  <rgm@gnu.org>
 
 	* erc-dcc.el (pcomplete-erc-all-nicks):
